# ConfigGuardian

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configguardian/: README.md  __init__.py  cli.py  main.py
configguardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configguardian/ai/: __init__.py  explain.py  severity.py
configguardian/alerts/: __init__.py  base.py  discord.py  email.py  manager.py  slack.py  telegram.py
configguardian/analyzers/: __init__.py  cron.py  generic.py  nginx.py  passwd.py  ssh.py  sudoers.py
configguardian/core/: __init__.py  analyzer.py  config_loader.py  database.py  diff_engine.py  hashing.py  monitor.py  rollback.py  scheduler.py  snapshot.py  timeline.py
configguardian/data/: database.db
configguardian/models/: __init__.py  alert_model.py  config_model.py  event_model.py  snapshot_model.py
configguardian/reports/: __init__.py  html_report.py  json_report.py  markdown_report.py
configguardian/utils/: constants.py  file_utils.py  helpers.py  logger.py
deploy/: README.md  configguardian.service  install.sh
docs/: PROMPT.md
examples/: config.yaml
tests/: __init__.py  test_alerts.py  test_analyzers.py  test_config_loader.py  test_core_services.py  test_database.py  test_models.py  test_scheduler.py
