[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configguardian"
version = "0.1.0"
description = "Linux configuration monitoring, snapshotting, and risk analysis CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "ConfigGuardian Maintainers" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "deepdiff>=7.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
configguardian = "configguardian.cli:app"

[tool.setuptools.packages.find]
include = ["configguardian*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
